<resources>
    <string name="app_name">Joboo Expert</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="intro_1">Search nearby Employers.</string>
    <string name="intro_2">Make yourself more beautiful more than you think.</string>
    <string name="intro_3">Hire the best Photographer &amp; create your moment.</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="server_error">Unable to connect server.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$)</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="label_select_img">Select image</string>
    <string name="invoice">Invoice</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirmed</string>
    <string name="acc">Accepted</string>
    <string name="rej">Rejected</string>
    <string name="com">Completed</string>
    <string name="dec">Decline</string>
    <string name="dec_msg">Are you sure you want to decline this appointment?</string>
    <string name="acc_msg">Are you sure you want to Accept this appointment?</string>
    <string name="comp">Complete</string>
    <string name="close_msg">Are your sure you want to close joboo?</string>
    <string name="yes">YES!</string>
    <string name="no">NO</string>
    <string name="my_profile">Expert Profile</string>
    <string name="select_img">Select Image From</string>
    <string name="select_pic">Select Picture</string>
    <string name="jobs_comleted">Jobs Completed</string>
    <string name="completion">Completion</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="review">Review</string>
    <string name="F">Hourly Rate</string>
    <string name="rate">Rate</string>
    <string name="hr">/hr</string>
    <string name="fix_rate">Fix Rate</string>
    <string name="fixed_rate">fixed rate</string>
    <string name="commis_msg">Joboo commission will be added into your hourly rate. It will vary according to category selection. Category rate :</string>
    <string name="select_cate">Select Category</string>
    <string name="select_sub_cate">Select Sub-Category</string>
    <string name="val_cat_sele">Please select category.</string>
    <string name="val_sub_cat_sele">Please select Subcategory.</string>
    <string name="val_name">Please enter name.</string>
    <string name="val_last_name">Please enter last name.</string>
    <string name="val_bio">Please enter bio.</string>
    <string name="val_location">Please enter location.</string>
    <string name="val_rate">Please enter rate.</string>
    <string name="val_youtube_url">Please enter youtube url.</string>
    <string name="chats">Chats</string>
    <string name="val_comment">Please enter message</string>
    <string name="val_email">Please enter email id.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="val_pass1">Please renter at least six characters password.</string>
    <string name="val_pass3">Password does not match.</string>
    <string name="my_appoin">My Appointments</string>
    <string name="customer_booking">Ongoing Jobs</string>
    <string name="dec_cpas">Decline</string>
    <string name="decline_msg">Are you sure you want to decline request?</string>
    <string name="get_discount">Get Discount</string>
    <string name="code_copy">Code Copy</string>
    <string name="referral_msg">Hello, this is my Referral Code</string>
    <string name="opss_share">Opps!! It seems that you have not installed any sharing app.</string>
    <string name="support">Support</string>
    <string name="val_title">Please enter title.</string>
    <string name="profile_settings">Personal Profile</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="notifications">Notifications</string>
    <string name="my_earnings">Your Earnings</string>
    <string name="earning_graph">Earning Graph</string>
    <string name="payment">Payment</string>
    <string name="process_payment">Are you sure want to process your payment?</string>
    <string name="jobs">Find Jobs</string>
    <string name="bookings">My Jobs</string>
    <string name="job_title">Job Title:</string>
    <string name="date">Date:</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_price">Please enter price.</string>
    <string name="inprogres">Inprogress</string>
    <string name="reject">Cancel</string>
    <string name="reject_msg">Are you sure you want to cancel the application?</string>
    <string name="start_app">Are you sure do you want to start the application?</string>
    <string name="start">Start</string>
    <string name="service">Invoice Id #</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">Duration:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="payment1">Payment ?</string>
    <string name="select_your_payment_mode">Select your payment mode</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="about">About</string>
    <string name="qualification">Qualification</string>
    <string name="skills">Skills</string>
    <string name="privious_work">Previous Work</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="apply_code">Apply Code</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Id</string>
    <string name="email_address1">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="password_change">Change Password</string>
    <string name="set_address">Set Address</string>
    <string name="set_home_address">Set Home Address</string>
    <string name="set_office_address">Set Office Address</string>
    <string name="signout">SignOut</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="didn_t_have_any_account">Don\'t have an account?</string>
    <string name="first_name">Full Name</string>
    <string name="enter_password_again">Re-enter Password</string>
    <string name="referal">Enter Referal Code</string>
    <string name="do_you_have_an_account_already">Do you have an account already?</string>
    <string name="job_id">Job ID:</string>
    <string name="services_type">Service type:</string>
    <string name="apply">APPLY</string>
    <string name="reject1">Cancel</string>
    <string name="start_job">Start Job</string>
    <string name="inprogress">Inprogress</string>
    <string name="edit">Edit</string>
    <string name="complete">Complete</string>
    <string name="review_by">Review By</string>
    <string name="add_title">Add Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="cancel1">Cancel</string>
    <string name="add">Add</string>
    <string name="add_video_url">Add Video Url</string>
    <string name="enter_youtube_url">Enter Youtube Url *</string>
    <string name="save">Save</string>
    <string name="apply_job">Apply Job</string>
    <string name="write_description">Write Description</string>
    <string name="price">Price</string>
    <string name="edit_about_me">Edit About Me</string>
    <string name="add_gallery">Add Gallery</string>
    <string name="edit_personal_information">Edit Personal Information</string>
    <string name="select_your_speciality">Select Your Speciality</string>
    <string name="your_name">Your Name</string>
    <string name="your_bio">Your Bio</string>
    <string name="your_city">Your City</string>
    <string name="your_country">Your Country</string>
    <string name="your_location">Your Location</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="add_qualification">Add Qualification</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_skills">Add Skills</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select">Select</string>
    <string name="search_by_job">Search by Job Title</string>
    <string name="search_by_cus">Search by Customer</string>
    <string name="no_jobs_applied">NO JOBS APPLIED</string>
    <string name="no_appointment_found">NO APPOINTMENT FOUND</string>
    <string name="no_jobs_found">NO JOBS FOUND</string>
    <string name="no_booking_found">NO JOBS FOUND</string>
    <string name="no_chat_history_found">NO CHAT HISTORY FOUND</string>
    <string name="no_notification_found">NO NOTIFICATION FOUND</string>
    <string name="new_request_found">NEW REQUEST FOUND</string>
    <string name="working_time">Working Time</string>
    <string name="decline">Decline</string>
    <string name="start_job1">Start Job</string>
    <string name="finish_the_job">Finish The Job</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="no_request_found">NO REQUEST FOUND</string>
    <string name="paid1">Paid</string>
    <string name="unpaid1">Unpaid</string>
    <string name="all_jobs">All Jobs</string>
    <string name="all_booking">All Jobs</string>
    <string name="accept_booking">Accepted Jobs</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="fit_image">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="free">FREE</string>
    <string name="circle">CIRCLE</string>
    <string name="this_week">This Week</string>
    <string name="online_earning">Online Earning</string>
    <string name="cash_earning">Cash Earning</string>
    <string name="complete1">Complete %</string>
    <string name="total_earning">Total Earning</string>
    <string name="job_done">Job Done</string>
    <string name="total_job">Total Job</string>
    <string name="my_rate">My Rate</string>
    <string name="incomplete_profile">Incomplete Profile</string>
    <string name="incomplete_profile_msg">Your profile is incomplete, Please complete your profile</string>
    <string name="pendings">Pending Bookings</string>
    <string name="accepted">Accepted Bookings</string>
    <string name="rejected">Rejected Bookings</string>
    <string name="completed">Completed Bookings</string>
</resources>