<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/action_bar_menus"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.expert.utils.CustomTextViewBold
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_personal_information"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBanner"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:src="@drawable/banner_img" />

            <com.expert.utils.InputFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etCategoryD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_drop_down"
                    android:editable="false"
                    android:hint="@string/select_your_speciality"
                    android:singleLine="true"
                    android:text="" />

            </com.expert.utils.InputFieldView>

            <com.expert.utils.InputFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etSubCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_drop_down"
                    android:editable="false"
                    android:hint="Select your sub-categories"
                    android:singleLine="true"
                    android:text=""
                    android:ellipsize="end"/>

            </com.expert.utils.InputFieldView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="100">
                <com.expert.utils.InputOpenFieldView
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.expert.utils.CustomEditText
                        android:id="@+id/etNameD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="First name"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:text="" />

                </com.expert.utils.InputOpenFieldView>

                <com.expert.utils.InputOpenFieldView
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.expert.utils.CustomEditText
                        android:id="@+id/etLastNameD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Last nmae"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:text="" />

                </com.expert.utils.InputOpenFieldView>
            </LinearLayout>



            <com.expert.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etCityD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_city"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:text="" />

            </com.expert.utils.InputOpenFieldView>

            <com.expert.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etCountryD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_country"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:text="" />

            </com.expert.utils.InputOpenFieldView>

            <com.expert.utils.InputFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etLocationD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_placeholder"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/your_location"
                    android:singleLine="true"
                    android:text="" />

            </com.expert.utils.InputFieldView>

            <com.expert.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etRateD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_dollar"
                    android:hint="@string/my_rate"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:text="" />

            </com.expert.utils.InputOpenFieldView>

            <com.expert.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etBioD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/your_bio"
                    android:maxLength="40"
                    android:text="" />

            </com.expert.utils.InputOpenFieldView>

            <com.expert.utils.CustomTextView
                android:id="@+id/bioLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="2dp"
                android:text="" />

            <com.expert.utils.InputOpenFieldView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.expert.utils.CustomEditText
                    android:id="@+id/etAboutD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/write_description"
                    android:maxLength="200"
                    android:text="" />

            </com.expert.utils.InputOpenFieldView>

            <com.expert.utils.CustomTextView
                android:id="@+id/aboutLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="2dp"
                android:text="" />


            <com.expert.utils.CustomTextViewBold
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black" />

            <com.expert.utils.CustomButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_selector3"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>